@startuml

class App {
    + main(args : String[]) {static}
}

class UserService {
    + UserService(IUserInfo userInfo)
    - IUserInfo UserInfo
    ~ getUserInfo()
}

interface IOuterUserInfo {
    + basicInfo()
    + technicalInfo()
}

interface IUserInfo {
    + getName()
    + getAge()
    + getTechnical()
}

class OuterUserInfo {
    + basicInfo()
    + technicalInfo()
}

class UserInfo {
    + getName()
    + getAge()
    + getTechnical()
}

class OuterUserAdapter {
    + getName()
    + getAge()
    + getTechnical()
}

OuterUserAdapter ..|> IUserInfo
OuterUserAdapter --|> OuterUserInfo
UserInfo ..|> IUserInfo
OuterUserInfo ..|> IOuterUserInfo
UserService --> IUserInfo

@enduml